# VolumeUtils

./: .gitignore  CMakeLists.txt  README.MD  README_CN.MD
include/VolumeUtils/: Volume.hpp  Volume.inl
src/: CPUVideoCodec.cpp  EncodedBlockedGridVolumeFile.hpp  EncodedBlockedGridVolumeReader.cpp  EncodedBlockedGridVolumeWriter.cpp  GPUVideoCodec.cpp  GridVolume.cpp  SlicedGridVolume.cpp  VideoCodec.hpp  Volume.cpp
src/Common/: Common.hpp  LRU.hpp  Utils.hpp
src/VideoCodec/NVCodec/: NVCodec.cpp
src/VolumeCodec/: VolumeCodec.hpp
src/VolumeCodec/BitsCodec/: BitsCodec.cpp  BitsCodec.hpp  CPUBitsCodec.cpp  GPUBitsCodec.cpp  GPUBitsCodec.hpp
src/VolumeCodec/VideoCodec/: CPUVideoCodec.cpp  CPUVideoCodec.hpp  GPUVideoCodec.cpp  GPUVideoCodec.hpp  VideoCodec.cpp  VideoCodec.hpp
src/VolumeCodec/VideoCodec/FFmpeg/: FFmpeg.cpp  FFmpeg.hpp
src/VolumeCodec/VideoCodec/NVCodec/: NVCodec.cpp  NVCodec.hpp
src/VolumeIO/: EncodedBlockedGridVolumeFile.hpp  EncodedBlockedGridVolumeIO.cpp  EncodedBlockedGridVolumeReader.cpp  EncodedBlockedGridVolumeWriter.cpp  EncodedGridVolumeIO.cpp  RawGridVolumeIO.cpp  SlicedGridVolumeIO.cpp
src/VolumeModel/: RawGridVolume.cpp  Volume.cpp
test/: CMakeLists.txt  TestFFmpeg.cpp  TestGridVolume.cpp  foot.vol.json  kingsnake.process.json  kingsnake_decoding_test.process.json
tool/: BlockedEncodedVolumeProcessor.cpp  CMakeLists.txt  RawVolumeProcessor.cpp  SlicedVolumeProcessor.cpp  VolumeProcessor.cpp  VolumeProcessor.hpp
tool/Detail/: IOImpl.hpp  System.cpp
tool/test_files/: foot.encoded_blocked.desc.json  foot.encoded_blocked.json  foot.process.json  foot.raw.desc.json  foot.sliced.desc.json  foot.vol.json
tools/: CMakeLists.txt  SlicedToBlockedEncoded.cpp  VolumeProcessor.cpp  VolumeProcessor.hpp  foot.sliced.json
